--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "i-love-football",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "email": "joseiltonjuniortech@gmail.com",
+    "name": "Junior Ferreira",
+    "url": "https://ferreirajr.tech"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,14 +14,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.8",
     "@types/node": "20.1.5",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-toastify": "^9.1.3",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0"
   }
 }
