--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-hook-form": "^7.43.9",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^8.0.5",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
   },
