--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.3.1",
     "react-toastify": "^9.1.3",
