--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "20.1.5",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "anychart-react": "^1.4.1",
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
