--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "react-icons": "^4.8.0",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^8.0.5",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
   },
